web/libraries/fractal/components/tests/filter/fail/country-timezones.twig
{# Europe/Paris #}
{{ 'FR'|country_timezones|join(', ') }}
